--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>this is a test</title>
+  <title>Min</title>
   <meta charset="utf-8" />
 </head>
 
@@ -17,6 +17,7 @@
     <div id="projects">
       <h3>Projects</h3>
       <a href="#" target="blank">Republish a Text</a><br>
+        <a href= "https://www.instagram.com/cca_cooker/"> instagram </a>
     </div>
   </div>
 </body>
