--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <div id="projects">
       <h3>Projects</h3>
-      <a href="#" target="blank">Republish a Text</a><br>
+      <a href="https://www.instagram.com/cca_cooker/">Republish a Text</a><br>
     </div>
   </div>
 </body>
