--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
   <title>this is a test</title>
   <meta charset="utf-8" />
+  <link rel="stylesheet" href="styles.css">
+  <link href='https://fonts.googleapis.com/css?family=Karla:400,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
   <div class="main">
-    <h1>Min</h1>  
+    <p class="min"><b> Min</b> </p>
     <div id="exercises">
       <h3>Exercises</h3>
       <a href="#" target="blank">Coding from Life</a>
@@ -16,7 +18,7 @@
     
     <div id="projects">
       <h3>Projects</h3>
-      <a href="https://www.instagram.com/cca_cooker/">Republish a Text</a><br>
+      <a href="https://www.facebook.com/permalink.php?story_fbid=118637858598436&id=100013566668106&comment_id=118656231929932&notif_t=feed_comment&notif_id=1474865725204853">Republish a Text</a><br>
     </div>
   </div>
 </body>
