--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <div id="projects">
       <h3>Projects</h3>
-      <a href="https://www.facebook.com/permalink.php?story_fbid=118637858598436&id=100013566668106&comment_id=118656231929932&notif_t=feed_comment&notif_id=1474865725204853">Republish a Text</a><br>
+      <a href="https://www.instagram.com/cca_cooker/">Republish a Text</a><br>
     </div>
   </div>
 </body>
