--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>this is a test</title>
+  <title>Min's world</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="styles.css">
   <link href='https://fonts.googleapis.com/css?family=Karla:400,700' rel='stylesheet' type='text/css'>
@@ -13,7 +13,7 @@
     <p class="min"><b> Min</b> </p>
     <div id="exercises">
       <h3>Exercises</h3>
-      <a href="#" target="blank">Coding from Life</a>
+        <a href= "exercises/ex1/index.html">Exercise 1</a>
     </div>
     
     <div id="projects">
