--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
     
     <div id="projects">
       <h3>Projects</h3>
-      <a href="https://www.instagram.com/cca_cooker/">Republish a Text</a><br>
+        <div id="first">
+          <a href="https://www.instagram.com/cca_cooker/">Republish a Text</a><br>
+        </div>
+        <div id="second">
+          <a href= "projects/project 2/index.html">Sketches</a>
+        </div>
     </div>
   </div>
 </body>
