--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     <div id="projects">
       <h3>Projects</h3>
         <div id="first">
-          <a href="https://www.instagram.com/cca_cooker/">Republish a Text</a><br>
+          <a href="https://www.instagram.com/cca_cooker/">Project 1</a><br>
         </div>
-        <div id="second">
-          <a href= "projects/project 2/index.html">Sketches</a>
+        <div class="second">
+          
+          <a href= "projects/p2/index.html">10.24</a>
         </div>
     </div>
   </div>
