--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="second">
           
-          <a href= "projects/p2/index.html">10.24</a>
+          <a href= "projects/p2/index.html">Project 2</a>
         </div>
     </div>
   </div>
