--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="exercises">
       <h3>Exercises</h3>
         <a href= "exercises/ex1/index.html">Exercise 1</a>
+        <a href= "exercises/ex2/index.html">Exercise 2:HOVER </a>
     </div>
     
     <div id="projects">
